test/expected/regression-delayed-formater.txt
/scripts/regression-delayed-formater.js:18
throw new Error('trace');
^

Error: trace
    at-hack Object.<anonymous> (/scripts/regression-delayed-formater.js:18:7)
    at-hack Module._compile (module.js:425:26)
    at-hack Object.Module._extensions..js (module.js:432:10)
    at-hack Module.load (module.js:356:32)
    at-hack Function.Module._load (module.js:311:12)
    at-hack Function.Module.runMain (module.js:457:10)
    at-hack startup (node.js:134:18)
    at-hack node.js:961:3
